[package]
name = "honours-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ntest = "0.9.0"
gif = "0.13.1"
tqdm = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytesize = "1.0"
